--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Hello. My name is Sam.</h1>
-    <h3>This site is currently under construction, please check back.</h3>
+    <h3>This site is currently under construction, please check back soon!</h3>
   </body>
 </html>
