added to index and added pdf file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,33 @@
   <body>
     <h1>Hello. My name is Sam.</h1>
     <h3>This site is currently under construction, please check back soon!</h3>
+    <br>
+    <h2>Contact Me!</h2>
+    <p>
+      email: <a href="mailto:samuel.weisse@gmail.com">samuel.weisse@gmail.com</a>
+    </p>
+    <br>
+    <h2>About Me</h2>
+    <p>Please check back soon as I hope to have my portfolio updated by Friday July 29th!</p>
+    <h3><a href="Resume.pdf" target="_blank">My Resume</a></h3>
+    <h3>Current: Web Development Immersive with General Assembly</h3>
+    <p>
+      Full­stack web development program focused on common best practices in
+      object­-oriented programming, MVC frameworks, data modeling, and
+      test­-driven development. Developed a portfolio of individually focused
+      and collaboratively focused projects. Projects include:
+    </p>
+    <div>
+      <ul>
+          <li><a href="http://www.samuelweisse.com/project-1/">Backgammon</a></li>
+          <li><a href="https://secure-plains-44565.herokuapp.com/">Basic Forum</a></li>
+          <li><a href="https://magicdeckbuilder.herokuapp.com/">Magic: The Gathering Deck Builder</a></li>
+      </ul>
+      <p>
+        If you are interesting in looking at any of my other work or in
+        specific code for these project please feel to check out my
+        <a href="https://github.com/Arcdeamonofire">Github</a>!
+      </p>
+    </div>
   </body>
 </html>
