--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/navbar.js"></script>
-    <base href="/">
+    <!-- <base href="/"> -->
   </head>
   <body>
 
@@ -25,7 +25,7 @@
 
     <h3>This site is currently under construction, please check back soon!</h3>
 
-    <main ng-view></main>
+    <!-- <main ng-view></main> -->
 
 
   </body>
