--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="PortfolioApp">
+<!-- <html ng-app="PortfolioApp"> -->
   <head>
     <meta charset="utf-8">
     <title>Home - Samuel Weisse</title>
