--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Home - Samuel Weisse</title>
-    <link rel="stylesheet" href="css/style.css" charset="utf-8">
-    <link rel="stylesheet" href="css/navbar.css" charset="utf-8">
+    <link rel="stylesheet" href="public/css/style.css" charset="utf-8">
+    <link rel="stylesheet" href="public/css/navbar.css" charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/navbar.js"></script>
+    <script type="text/javascript" src="public/js/app.js"></script>
+    <script type="text/javascript" src="public/js/navbar.js"></script>
     <!-- <base href="/"> -->
   </head>
   <body>
