--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- <html ng-app="PortfolioApp"> -->
+<html ng-app="PortfolioApp">
   <head>
     <meta charset="utf-8">
     <title>Home - Samuel Weisse</title>
@@ -24,7 +24,7 @@
     </nav>
 
     <h3>This site is currently under construction, please check back soon!</h3>
-
+      {{2+2}}
     <!-- <main ng-view></main> -->
 
 
