--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Home - Samuel Weisse</title>
+    <link rel="stylesheet" href="public/css/normalize.css" charset="utf-8">
+    <link rel="stylesheet" href="public/css/skeleton.css" charset="utf-8">
     <link rel="stylesheet" href="public/css/style.css" charset="utf-8">
     <link rel="stylesheet" href="public/css/navbar.css" charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -24,7 +26,6 @@
     </nav>
 
     <h3>This site is currently under construction, please check back soon!</h3>
-      {{2+2}}
 
     <main ng-view></main>
 
