--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Home - Samuel Weisse</title>
     <link rel="stylesheet" href="public/css/normalize.css" charset="utf-8">
     <link rel="stylesheet" href="public/css/skeleton.css" charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="public/slick/slick.css"/>
     <link rel="stylesheet" href="public/css/style.css" charset="utf-8">
     <link rel="stylesheet" href="public/css/navbar.css" charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -29,6 +30,10 @@
 
     <main ng-view></main>
 
+    <script type="text/javascript" src="public/js/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="public/slick/slick.min.js"></script>
+    <script type="text/javascript" src="public/js/carousel.js">
 
+    </script>
   </body>
 </html>
