--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="public/css/normalize.css" charset="utf-8">
     <link rel="stylesheet" href="public/css/skeleton.css" charset="utf-8">
     <link rel="stylesheet" type="text/css" href="public/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="public/slick/slick-theme.css"/>
     <link rel="stylesheet" href="public/css/style.css" charset="utf-8">
     <link rel="stylesheet" href="public/css/navbar.css" charset="utf-8">
 
@@ -29,11 +30,8 @@
     <h3>This site is currently under construction, please check back soon!</h3>
 
     <main ng-view></main>
-    
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script type="text/javascript" src="public/js/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="public/slick/slick.min.js"></script>
-    <script type="text/javascript" src="public/js/carousel.js">
+
+
 
     </script>
   </body>
