--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html ng-app="PortfolioApp">
+<html>
+<!-- ng-app="PortfolioApp" -->
   <head>
     <meta charset="utf-8">
     <title>Home - Samuel Weisse</title>
@@ -10,11 +11,11 @@
     <link rel="stylesheet" href="public/css/style.css" charset="utf-8">
     <link rel="stylesheet" href="public/css/navbar.css" charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
-    <script type="text/javascript" src="public/js/app.js"></script>
+    <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script> -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script> -->
+    <!-- <script type="text/javascript" src="public/js/app.js"></script> -->
     <script type="text/javascript" src="public/js/navbar.js"></script>
-    <base href="/">
+    <!-- <base href="/"> -->
   </head>
   <body>
 
@@ -22,14 +23,50 @@
       <div id="logo"> MY LOGO</div>
       <ul>
         <li><a href="/">ABOUT</a></li>
-        <li><a href="/contact">CONTACT</a></li>
+        <!-- <li><a href="/contact">CONTACT</a></li> -->
         <li><a href="https://github.com/Arcdeamonofire">WORK</a></li>
       </ul>
     </nav>
 
     <h3>This site is currently under construction, please check back soon!</h3>
 
-    <main ng-view></main>
+    <h1>Hello. My name is Sam.</h1>
+
+     <h3>I am an addicted problem solver, enthusiastic about the creative process and the actualization of client dreams. I seek out each challenge with relish and thrive on the development process to bring a project from idea to completion. I take a holistic approach to my work and strive to be a strong link in the team dynamic.</h3>
+
+     <br>
+     <h2>My Work</h2>
+     <div class="">
+       <h3><a href="Resume.pdf" target="_blank" class="button">My Resume</a></h3>
+     </div>
+
+     <h3>Current: Web Development Immersive with General Assembly</h3>
+     <p>
+       Full­stack web development program focused on common best practices in
+       object­-oriented programming, MVC frameworks, data modeling, and
+       test­-driven development. Developed a portfolio of individually focused
+       and collaboratively focused projects. Projects included:
+     </p>
+     <div class="single-item">
+       <div><a href="http://www.samuelweisse.com/project-1/"><img src="public/img/Project1.png" alt="Project 1 Backgammon"/></a></div>
+       <div><a href="https://secure-plains-44565.herokuapp.com/"><img src="public/img/Project2.png" alt="Project 2 Basic Forum"/></a></div>
+       <div><a href="https://magicdeckbuilder.herokuapp.com/"><img src="public/img/Project3-2.png" alt="Project 3 Meanstack App for MTGDeckBuilder"/></a></div>
+    </div>
+
+
+    <div>
+       <p>
+         If you are interesting in looking at any of my other work or in
+         specific code for these project please feel to check out my
+         <a href="https://github.com/Arcdeamonofire">Github</a>!
+       </p>
+    </div>
+
+
+    <script type="text/javascript" src="public/js/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="public/slick/slick.min.js"></script>
+    <script type="text/javascript" src="public/js/carousel.js">
+    <!-- <main ng-view></main> -->
 
 
 
