--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Home - Samuel Weisse</title>
     <link rel="stylesheet" href="public/css/normalize.css" charset="utf-8">
     <link rel="stylesheet" href="public/css/skeleton.css" charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="public/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="public/slick/slick-theme.css"/>
+    <link rel="stylesheet" href="public/owl-carousel/owl.carousel.css">
+    <link rel="stylesheet" href="public/owl-carousel/owl.theme.css">
+
     <link rel="stylesheet" href="public/css/style.css" charset="utf-8">
     <link rel="stylesheet" href="public/css/navbar.css" charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -15,6 +16,7 @@
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script> -->
     <!-- <script type="text/javascript" src="public/js/app.js"></script> -->
     <script type="text/javascript" src="public/js/navbar.js"></script>
+    <script src="public/owl-carousel/owl.carousel.js"></script>
     <!-- <base href="/"> -->
   </head>
   <body>
@@ -62,10 +64,6 @@
        </p>
     </div>
 
-
-    <script type="text/javascript" src="public/js/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="public/slick/slick.min.js"></script>
-    <script type="text/javascript" src="public/js/carousel.js">
     <!-- <main ng-view></main> -->
 
 
