--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
        test­-driven development. Developed a portfolio of individually focused
        and collaboratively focused projects. Projects included:
      </p>
-     <div id="projects" class="owl-carousel">
+     <div id="projects" class="owl-carousel  owl-theme">
        <div class="item"><a href="http://www.samuelweisse.com/project-1/"><img src="public/img/Project1.png" alt="Project 1 Backgammon"/></a></div>
        <div class="item"><a href="https://secure-plains-44565.herokuapp.com/"><img src="public/img/Project2.png" alt="Project 2 Basic Forum"/></a></div>
        <div class="item"><a href="https://magicdeckbuilder.herokuapp.com/"><img src="public/img/Project3-2.png" alt="Project 3 Meanstack App for MTGDeckBuilder"/></a></div>
