--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
     <div>
        <p>
-         If you are interesting in looking at any of my other work or in
-         specific code for these project please feel to check out my
+         If you are interested in looking at any of my other work or in
+         specific code for these projects please feel to check out my
          <a href="https://github.com/Arcdeamonofire">Github</a>!
        </p>
     </div>
