--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- <script type="text/javascript" src="public/js/app.js"></script> -->
     <script type="text/javascript" src="public/js/navbar.js"></script>
     <script src="public/owl-carousel/owl.carousel.js"></script>
+    <script type="text/javascript" src="public/js/carousel.js">
+
+    </script>
     <!-- <base href="/"> -->
   </head>
   <body>
