--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script> -->
     <!-- <script type="text/javascript" src="public/js/app.js"></script> -->
     <script type="text/javascript" src="public/js/navbar.js"></script>
-    <script src="public/owl-carousel/owl.carousel.js"></script>
-    <script type="text/javascript" src="public/js/carousel.js">
-
-    </script>
+    <script type="text/javascript" src="public/owl-carousel/owl.carousel.js"></script>
+    <script type="text/javascript" src="public/js/carousel.js"></script>
     <!-- <base href="/"> -->
   </head>
   <body>
@@ -68,9 +66,5 @@
     </div>
 
     <!-- <main ng-view></main> -->
-
-
-
-    </script>
   </body>
 </html>
