fixed background color

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
 
     <nav>
-      <div id="logo"> MY LOGO</div>
+      <div id="logo"> Samuel Weisse</div>
       <ul>
         <li><a href="/">ABOUT</a></li>
         <!-- <li><a href="/contact">CONTACT</a></li> -->
