--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
 
     <nav>
-      <div id="logo"> Samuel Weisse</div>
+      <div id="logo"> <img src="public/img/logo.jpg" alt="" /></div>
       <ul>
         <li><a href="/">ABOUT</a></li>
         <!-- <li><a href="/contact">CONTACT</a></li> -->
@@ -33,9 +33,9 @@
 
     <h3>This site is currently under construction, please check back soon!</h3>
 
-    <h1>Hello. My name is Sam.</h1>
+    <h1><span id="accent">Hello.</span> My name is Sam.</h1>
 
-     <h3>I am an addicted problem solver, enthusiastic about the creative process and the actualization of client dreams. I seek out each challenge with relish and thrive on the development process to bring a project from idea to completion. I take a holistic approach to my work and strive to be a strong link in the team dynamic.</h3>
+     <p id="brand">I am an addicted problem solver, enthusiastic about the creative process and the actualization of client dreams. I seek out each challenge with relish and thrive on the development process to bring a project from idea to completion. I take a holistic approach to my work and strive to be a strong link in the team dynamic.</p>
 
      <br>
      <h2>My Work</h2>
@@ -48,7 +48,15 @@
        Full­stack web development program focused on common best practices in
        object­-oriented programming, MVC frameworks, data modeling, and
        test­-driven development. Developed a portfolio of individually focused
-       and collaboratively focused projects. Projects included:
+       and collaboratively focused projects.
+     </p>
+     <p>
+       Languages: HTML5/CSS3, Javascript(Jquery), Ruby, MySQL, PostgresSQL, PHP
+       Frameworks: Node.js(express, MEAN stack), Ruby on Rails, Wordpress
+       General experience with single page MEAN stack app design and API utilization.
+     </p>
+     <p>
+       Projects included:
      </p>
      <div id="projects" class="owl-carousel  owl-theme">
        <div class="item"><a href="http://www.samuelweisse.com/project-1/"><img src="public/img/Project1.png" alt="Project 1 Backgammon"/></a></div>
