--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
 
     <nav>
-      <div id="logo"> <img src="public/img/logo.jpg" alt="logo" /></div>
+      <div id="logo"> <img src="public/img/Logo.jpg" alt="logo" /></div>
       <ul>
         <li><a href="/">ABOUT</a></li>
         <!-- <li><a href="/contact">CONTACT</a></li> -->
