--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
 
     <nav>
-      <div id="logo"> <img src="public/img/Logo.jpg" alt="logo" /></div>
+      <div id="logo"> <img src="public/img/logo2.jpg" alt="logo" /></div>
       <ul>
         <li><a href="/">ABOUT</a></li>
         <!-- <li><a href="/contact">CONTACT</a></li> -->
@@ -32,10 +32,18 @@
     </nav>
 
     <h3>This site is currently under construction, please check back soon!</h3>
+    <div class="row">
+      <img src="public/img/thumbnail.png" alt="thumbnail" id="me" class="one-third column"/>
+      <div class="two-thirds column">
+        <h1 ><span id="accent">Hello.</span> My name is Sam.</h1>
+        <p id="brand">I am an addicted problem solver, enthusiastic about the creative process and the actualization of client dreams. I seek out each challenge with relish and thrive on the development process to bring a project from idea to completion. I take a holistic approach to my work and strive to be a strong link in the team dynamic.</p>
+      </div>
 
+    </div>
+    <img src="public/img/thumbnail.png" alt="thumbnail" id="me"/>
     <h1><span id="accent">Hello.</span> My name is Sam.</h1>
 
-     <p id="brand">I am an addicted problem solver, enthusiastic about the creative process and the actualization of client dreams. I seek out each challenge with relish and thrive on the development process to bring a project from idea to completion. I take a holistic approach to my work and strive to be a strong link in the team dynamic.</p>
+
 
      <br>
      <h2>My Work</h2>
