--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
      <h2>My Work</h2>
      <div class="">
-       <h3><a href="Resume.pdf" target="_blank" class="button">My Resume</a></h3>
+       <h3><a href="Resume.pdf" target="_blank" class="button">Resume</a></h3>
      </div>
 
      <h3>Web Development Immersive with General Assembly</h3>
