added contact link to nav

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <ul>
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#projects">PROJECTS</a></li>
-        <!-- <li><a href="/contact">CONTACT</a></li> -->
+        <li><a href="#contact">CONTACT</a></li>
         <li><a href="https://github.com/Arcdeamonofire">GITHUB</a></li>
       </ul>
     </nav>
@@ -77,7 +77,7 @@
     </div>
 
 
-    <div id="Contact">
+    <div id="contact">
       <h2>Contact Me!</h2>
        <p>
          If you are interested in looking at any of my other work or in
