--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
        and collaboratively focused projects.
      </p>
      <p>
-       Languages: HTML5/CSS3, Javascript(Jquery), Ruby, MySQL, PostgresSQL, PHP <br>
+       Languages: HTML5/CSS3, Javascript(jQuery), Ruby, MySQL, PostgresSQL, PHP <br>
        Frameworks: Node.js(express, MEAN stack), Ruby on Rails, Wordpress <br>
        General experience with single page MEAN stack app design and API utilization.
      </p>
