nav glitch work

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       <div > <h3 id="logo">Samuel Weisse</h3></div>
       <ul>
         <li><a href="#about">ABOUT</a></li>
-        <li><a href="#projects">PROJECTS</a></li>
+        <li><a href="#work">WORK</a></li>
+        <li><a href="#proj">PROJECTS</a></li>
         <li><a href="#contact">CONTACT</a></li>
         <li><a href="https://github.com/Arcdeamonofire">GITHUB</a></li>
       </ul>
@@ -50,7 +51,7 @@
 
     <hr>
 
-     <h2>My Work</h2>
+     <h2 id="work">My Work</h2>
      <div class="">
        <h3><a href="Resume.pdf" target="_blank" class="button">Resume</a></h3>
      </div>
@@ -68,14 +69,14 @@
        General experience with single page MEAN stack app design and API utilization.
      </p>
      <p>
-       Projects included:
+       <h2 id="proj">Projects included:</h2>
      </p>
      <div id="projects" class="owl-carousel  owl-theme">
        <div class="item"><a href="http://www.samuelweisse.com/project-1/"><img src="public/img/Project1.png" alt="Project 1 Backgammon"/></a></div>
        <div class="item"><a href="https://secure-plains-44565.herokuapp.com/"><img src="public/img/Project2.png" alt="Project 2 Basic Forum"/></a></div>
        <div class="item"><a href="https://magicdeckbuilder.herokuapp.com/"><img src="public/img/Project3-2.png" alt="Project 3 Meanstack App for MTGDeckBuilder"/></a></div>
     </div>
-
+      
     <hr>
 
     <div id="contact">
