--- a/index.html
+++ b/index.html
@@ -84,28 +84,28 @@
         <a href="https://secure-plains-44565.herokuapp.com/"><img src="public/img/Project2.png" alt="Project 2 Basic Forum"/></a>
         <p><a href="https://github.com/Arcdeamonofire/project-2">Project's Github</a></p>
         <h5 class="projectdesc">Project Description</h3>
-        <p>Description goes here</p>
+        <p>An express app in node.js implementing a CRUD design and using restful routing as well as bootstrap styling</p>
       </div>
       <!-- Project 3 -->
       <div class="item">
         <a href="https://magicdeckbuilder.herokuapp.com/"><img src="public/img/Project3-2.png" alt="Project 3 Meanstack App for MTGDeckBuilder"/></a>
         <p><a href="https://github.com/Arcdeamonofire/project-3-MTG-MEANstack">Project's Github</a></p>
         <h5 class="projectdesc">Project Description</h3>
-        <p>Description goes here</p>
+        <p>A team project betweem myself and a classmate name James Goatcher. This project is a MEANstack app and was written using Angular.JS for its front-end appearance, Express.js for its server framework, MongoDB as a database, and within Node.js's runtime environment. It was styled with love using vanilla CSS. My main duties as a team member were focused on the Angular and Express files for this project. I developed the Mongoose framework in Express for our MongoDB database as well as the general framework and a great deal of the functionality of the angular file. I assissted James with the HTML pages as well, but my focus during the project was the Database and Angular funcitonality. I left the styling and visual structure as well as much of the content of the site to James.</p>
       </div>
       <!-- Project 4 MEANSTACK -->
       <div class="item">
         <a href="https://dailyplannerapp.herokuapp.com/"><img src="public/img/dailyplannerapp.png" alt="Project 4 MEANstack Daily Planner App"/></a>
         <p><a href="https://github.com/Arcdeamonofire/project-4-Planner-MEANstack">Project's Github</a></p>
         <h5 class="projectdesc">Project Description</h3>
-        <p>Description goes here</p>
+        <p>A simple display of a MEANstack app. MongoDB is employed as the Database and Express is used as the server. Angular is used to make this a single page app and Node holds everything together. This project is intended to be integrated with Google Oauth sign in and then Google calendar, but due to technical difficulties during the project time I was allotted to get this and the Hearthstone app done, I was forced to scrap those ideas and streamline the app to acheive basic functionality. I hope that in the coming months I can get the app working with Google's APIs.</p>
       </div>
       <!-- Project 4 Ruby on Rails -->
       <div class="item">
         <a href="https://hearthstonecodex.herokuapp.com/"><img src="public/img/hearthstonecodex.png" alt="Project 4 Ruby on Rails Hearthstone Codex"/></a>
         <p><a href="https://github.com/Arcdeamonofire/project-4-Hearthstone-RoR">Project's Github</a></p>
         <h5 class="projectdesc">Project Description</h3>
-        <p>Description goes here</p>
+        <p>A simple idea to make another deck builder, but this time for Hearthstone by Blizzard. Unfortunately Blizzard has yet to release an official API for Hearthstone so for the time being I am using a third party API. This has lead to issues with the reliabilty of the search functionality within my app as it relies upon the API's database to be working correctly and that has been an occasional problem. This app is built in Ruby on Rails.</p>
       </div>
     </div>
       
