Add division between My Work and Project sections

--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
        Frameworks: Node.js(express, MEAN stack), Ruby on Rails, Wordpress <br>
        General experience with single page MEAN stack app design and API utilization.
      </p>
-     <p>
-       <h2 id="proj">Projects included:</h2>
-     </p>
+       
+     <hr>
+    
+       <h2 id="proj">Projects</h2>
      <div id="projects" class="owl-carousel  owl-theme">
      <!-- Project 1 -->
 <!--  <div class="item">
