Added More to My Work Section

--- a/index.html
+++ b/index.html
@@ -55,8 +55,18 @@
      <div class="">
        <h3><a href="Resume.pdf" target="_blank" class="button">Resume</a></h3>
      </div>
+    
+     <h3>Instructor Assistant - General Assembly</h3>
+     <p>
+      Evaluate and grade web development assignments and homework.
+     </p>
+    
+     <h3>IT Personnel - Milpitas Christian School</h3>
+     <p>
+       Support the Administration and Teachers of the School with IT support when needed. Duties range from troubleshooting computer issues to imaging and deploying new equipment.
+     </p>
 
-     <h3>Web Development Immersive with General Assembly</h3>
+     <h3>Web Development Immersive - General Assembly</h3>
      <p>
        Full­stack web development program focused on common best practices in
        object­-oriented programming, MVC frameworks, data modeling, and
