Changed Resume Link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
      <h2 id="work">My Work</h2>
      <div class="">
-       <h3><a href="Resume.pdf" target="_blank" class="button">Resume</a></h3>
+       <h3><a href="SamuelWeisse_Resume2016.pdf" target="_blank" class="button">Resume</a></h3>
      </div>
     
      <h3>Instructor Assistant - General Assembly</h3>
